update a href and css phone number footer

--- a/404.html
+++ b/404.html
@@ -4,12 +4,15 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Curso Google Ads</title>
+		<title>El Instituto</title>
+
+		<link rel="stylesheet" href="./css/main.min.css">
+		<link rel="preload" href="./assets/banner/institutomarketing-home.jpg" as="image">
+
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="./css/main.min.css" />
+		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
 	</head>
-	<body class="in-blog in-other-pages">
+	<body class="not-found">
 		<!-- begin header -->
 		<header class="header">
 			<!-- header__top -->
@@ -230,281 +233,26 @@
 		<!-- end header -->
 		<!-- begin main -->
 		<main>
-			<!-- in-banner -->
-			<section class="in-banner  in-blog no-after-box right-block-pad-bottom" style="background: #000f47;">
-				<div class="container">
-					<div class="row align-items-center">
-						<div class="col-8 col-lg-12">
-							<span class="title">
-								Blog #INMK
-							</span>
-							<span class="descr top-arrow">
-								Nos gusta estar actualizados, por eso compartimos con vosotros las últimas novedades y herramientas del mundo del Marketing Digital. 
-							</span>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- /in-banner -->
-			<!-- in-search-panel -->
-			<section class="in-search-panel">
+			<section class="page-not-found">
 				<div class="container">
 					<div class="row">
 						<div class="col-12">
-							<div class="bg align-items-center">
-								<div class="block-filter">
-									<div class="item">
-										<label for="category">Categorías</label>
-										<select name="category" id="category">
-											<option>Todas las categorías</option>
-											<option value="1">1</option>
-											<option value="2">2</option>
-											<option value="3">3</option>
-											<option value="4">4</option>
-										</select>
-									</div>
-									<div class="item">
-										<label for="ordenar-por">Ordenar por</label>
-										<select name="ordenar-por" id="ordenar-por">
-											<option>Más recientes</option>
-											<option value="1">1</option>
-											<option value="2">2</option>
-											<option value="3">3</option>
-											<option value="4">4</option>
-										</select>
-									</div>
-								</div>
-								<div class="block-search">
-									<form class="search-form" action="" method="get">
-										<input type="text" placeholder="Búsqueda">
-										<button type="submit"></button>
-									</form>
+							<div class="block">
+								<span>
+									Ups, no hemos encontrado esta página. 
+								</span>
+								<h1>
+									Pero encotramos las mejores hipotecas
+								</h1>
+								<div class="block-btn">
+									<a href="#" class="btn red outline">Ir a la página principal</a>
+									<a href="#" class="btn red">Pide tu Estudio Gratuito </a>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
-			<!-- /in-search-panel -->
-			<!-- in-nuestro -->
-			<section class="in-nuestro">
-				<div class="container">
-					<div class="row">
-						<!-- col -->
-						<div class="col-6 col-sm-12">
-							<a href="">
-								<div class="block-img">
-									<picture>
-										<source media="(max-width:760px)" srcset="assets/nuestro-blog/table/blog-googleads.jpg">
-										<source media="(max-width:990px)" srcset="assets/nuestro-blog/table/blog-googleads.jpg">
-										<source media="(min-width:991px)" srcset="assets/nuestro-blog/blog-googleads.jpg">
-										<img class="img-responsive" src="assets/nuestro-blog/blog-googleads.jpg">
-									</picture>
-								</div>
-								<div class="block">
-									<h5>
-										Estrategias en Google Ads: ¿Qué son los modelos de atribución y para qué sirven?
-									</h5>
-									<ul class="list-hash-tag">
-										<li>
-											Por Toni Cortel
-										</li>
-										<li>
-											24 de julio, 2020
-										</li>
-										<li>
-											Google Ads
-										</li>
-									</ul>
-								</div>
-							</a>
-						</div>
-						<!-- /col -->
-						<!-- col -->
-						<div class="col-6 col-sm-12">
-							<a href="">
-								<div class="block-img">
-									<picture>
-										<source media="(max-width:760px)" srcset="assets/nuestro-blog/table/blog-facebook.jpg">
-										<source media="(max-width:990px)" srcset="assets/nuestro-blog/table/blog-facebook.jpg">
-										<source media="(min-width:991px)" srcset="assets/nuestro-blog/blog-facebook.jpg">
-										<img class="img-responsive" src="assets/nuestro-blog/blog-facebook.jpg">
-									</picture>
-								</div>
-								<div class="block">
-									<h5>
-										Estrategias en Google Ads: ¿Qué son los modelos de atribución y para qué sirven?
-									</h5>
-									<ul class="list-hash-tag">
-										<li>
-											Por Toni Cortel
-										</li>
-										<li>
-											24 de julio, 2020
-										</li>
-										<li>
-											Google Ads
-										</li>
-									</ul>
-								</div>
-							</a>
-						</div>
-						<!-- /col -->
-						<!-- col -->
-						<div class="col-6 col-sm-12">
-							<a href="">
-								<div class="block-img">
-									<picture>
-										<source media="(max-width:760px)" srcset="assets/nuestro-blog/table/blog-googleads.jpg">
-										<source media="(max-width:990px)" srcset="assets/nuestro-blog/table/blog-googleads.jpg">
-										<source media="(min-width:991px)" srcset="assets/nuestro-blog/blog-img-3.jpg">
-										<img class="img-responsive" src="assets/nuestro-blog/blog-img-3.jpg">
-									</picture>
-								</div>
-								<div class="block">
-									<h5>
-										Estrategias en Google Ads: ¿Qué son los modelos de atribución y para qué sirven?
-									</h5>
-									<ul class="list-hash-tag">
-										<li>
-											Por Toni Cortel
-										</li>
-										<li>
-											24 de julio, 2020
-										</li>
-										<li>
-											Google Ads
-										</li>
-									</ul>
-								</div>
-							</a>
-						</div>
-						<!-- /col -->
-						<!-- col -->
-						<div class="col-6 col-sm-12">
-							<a href="">
-								<div class="block-img">
-									<picture>
-										<source media="(max-width:760px)" srcset="assets/nuestro-blog/table/blog-facebook.jpg">
-										<source media="(max-width:990px)" srcset="assets/nuestro-blog/table/blog-facebook.jpg">
-										<source media="(min-width:991px)" srcset="assets/nuestro-blog/blog-img-4.jpg">
-										<img class="img-responsive" src="assets/nuestro-blog/blog-img-4.jpg">
-									</picture>
-								</div>
-								<div class="block">
-									<h5>
-										Estrategias en Google Ads: ¿Qué son los modelos de atribución y para qué sirven?
-									</h5>
-									<ul class="list-hash-tag">
-										<li>
-											Por Toni Cortel
-										</li>
-										<li>
-											24 de julio, 2020
-										</li>
-										<li>
-											Google Ads
-										</li>
-									</ul>
-								</div>
-							</a>
-						</div>
-						<!-- /col -->
-						<!-- col -->
-						<div class="col-6 col-sm-12">
-							<a href="">
-								<div class="block-img">
-									<picture>
-										<source media="(max-width:760px)" srcset="assets/nuestro-blog/table/blog-googleads.jpg">
-										<source media="(max-width:990px)" srcset="assets/nuestro-blog/table/blog-googleads.jpg">
-										<source media="(min-width:991px)" srcset="assets/nuestro-blog/blog-img-5.jpg">
-										<img class="img-responsive" src="assets/nuestro-blog/blog-img-5.jpg">
-									</picture>
-								</div>
-								<div class="block">
-									<h5>
-										Estrategias en Google Ads: ¿Qué son los modelos de atribución y para qué sirven?
-									</h5>
-									<ul class="list-hash-tag">
-										<li>
-											Por Toni Cortel
-										</li>
-										<li>
-											24 de julio, 2020
-										</li>
-										<li>
-											Google Ads
-										</li>
-									</ul>
-								</div>
-							</a>
-						</div>
-						<!-- /col -->
-						<!-- col -->
-						<div class="col-6 col-sm-12">
-							<a href="">
-								<div class="block-img">
-									<picture>
-										<source media="(max-width:760px)" srcset="assets/nuestro-blog/table/blog-facebook.jpg">
-										<source media="(max-width:990px)" srcset="assets/nuestro-blog/table/blog-facebook.jpg">
-										<source media="(min-width:991px)" srcset="assets/nuestro-blog/blog-img-4.jpg">
-										<img class="img-responsive" src="assets/nuestro-blog/blog-img-4.jpg">
-									</picture>
-								</div>
-								<div class="block">
-									<h5>
-										Estrategias en Google Ads: ¿Qué son los modelos de atribución y para qué sirven?
-									</h5>
-									<ul class="list-hash-tag">
-										<li>
-											Por Toni Cortel
-										</li>
-										<li>
-											24 de julio, 2020
-										</li>
-										<li>
-											Google Ads
-										</li>
-									</ul>
-								</div>
-							</a>
-						</div>
-						<!-- /col -->
-					</div>
-				</div>
-			</section>
-			<!-- /in-nuestro -->
-			<!-- in-breadcrump-g -->
-			<section class="in-breadcrump-g">
-				<div class="container">
-					<div class="row">
-						<div class="col-12">
-							<ul class="breadcrump-list">
-								<li class="prev-page">
-									<a href="#">
-										<i class="icon arrow-prev"></i>
-									</a>
-								</li>
-								<li>
-									<a href="#">1</a>
-								</li>
-								<li class="active">
-									<span>2</span>
-								</li>
-								<li>
-									<a href="#">3</a>
-								</li>
-								<li class="next-page">
-									<a href="#">
-										<i class="icon arrow-next"></i>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- /in-breadcrump-g -->
 		</main>
 		<!-- end main -->
 		<!-- begin footer -->
@@ -515,7 +263,7 @@
 					<div class="row">
 						<!-- col -->
 						<div class="col-3 col-lg-6 col-sm-12 logotype">
-							<img src="assets/footer/logo.png">
+							<img class="lazyload" data-src="assets/footer/logo.png">
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ante mauris, luctus eu purus vel, malesuada viverra urna.
 						</div>
 						<!-- /col -->
@@ -618,7 +366,7 @@
 				<div class="container">
 					<ul class="list-hash-tag">
 						<li class="text">
-							Copyright <script>var year = new Date().getFullYear();document.write(year);</script> Instituto Marketing - Todos Derechos Reservados
+							Copyright 2020 Instituto Marketing - Todos Derechos Reservados
 						</li>
 						<li>
 							<a href="">Aviso Legal </a>
@@ -632,7 +380,71 @@
 			<!-- footer__bottom -->
 		</footer>
 		<!-- end footer -->
+		<div class="newsletter">
+			<section class="in-form-g modal">
+				<div class="container">
+					<input type="checkbox" hidden="" name="subscribe-modal" id="subscribe-modal">
+					<label for="subscribe-modal" class="modal-close">x</label>
+					<div class="row align-items-center in-form-g__block">
+						<div class="col-5 col-sm-12 after-line-g">
+							<div class="in-quote__title">
+								<span>
+									¡Suscríbete<br>
+									a nuestra<br>
+									<strong>News!</strong>
+								</span>
+								<span>
+									Apúntate a nuestro boletín<br> mensual para recibir las<br> últimas noticias y artículos<br>  en tu bandeja de entrada.
+								</span>
+							</div>
+						</div>
+						<div class="col-7 col-sm-12">
+							<form action="" method="POST" class="form">
+								<div class="field">
+									<input type="text" name="name" placeholder="Nombre (Requerido)">
+								</div>
+								<div class="field">
+									<input type="text" name="email" placeholder="E-mail (Requerido)">
+								</div>
+								<div class="check-rule">
+									<div>
+										<input type="checkbox" name="privadad" hidden="" id="privadad">
+										<label for="privadad">He leído y acepto las <a href="">condiciones de privacidad</a></label>
+									</div>
+								</div>
+								<div class="block-btn">
+									<button type="submit">Solicitar información</button>
+								</div>
+							</form>
+							<div style="display: none" class="form-success">
+								<div>
+									<i class="icon icon-success white"></i>
+								</div>
+								<p class="text">
+									<strong>¡Enhorabuena!<br> Gracias por suscribirte a nuestra news.</strong>
+								</p>
+							</div>
+							<div style="display: none;" class="form-error">
+								<div>
+									<i class="icon icon-error white"></i>
+								</div>
+								<p class="text">
+									<strong>Ups algo salió mal.</strong><br> Intentalo de nuevo más tarde.
+								</p>
+								<div class="block-btn">
+									<a href="#" class="btn">
+										Volver ha intentar
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+		</div>
 		<script src="js/lazyload.js"></script>
 		<script src="js/header.js"></script>
+		<script src="js/slider.js"></script>
+		<script src="js/common.js"></script>
 	</body>
 </html>
