--- a/curso-analitica-web.html
+++ b/curso-analitica-web.html
@@ -682,7 +682,7 @@
 							<div class="in-nuestro-methodo-g__list">
 								<!-- item -->
 								<div class="item">
-									<input type="checkbox" hidden name="certificate-social-net" checked id="certificate-social-net">
+									<input type="checkbox" hidden name="certificate-social-net" id="certificate-social-net">
 									<label for="certificate-social-net">
 										<div>Formación práctica</div>
 										<span class="subtitle">
@@ -903,8 +903,8 @@
 											</div>
 										</li>
 									</ol>
-									<a class="carousel__prev"></a>
-									<a class="carousel__next"></a>
+									<a class="carousel__prev" href="javascript:void(0);"></a>
+									<a class="carousel__next" href="javascript:void(0);"></a>
 								</div>
 							</div>
 							<!-- /carousel -->
