--- a/curso-facebook-insta.html
+++ b/curso-facebook-insta.html
@@ -909,8 +909,8 @@
 											</div>
 										</li>
 									</ol>
-									<a class="carousel__prev"></a>
-									<a class="carousel__next"></a>
+									<a class="carousel__prev" href="javascript:void(0);"></a>
+									<a class="carousel__next" href="javascript:void(0);"></a>
 								</div>
 							</div>
 							<!-- /carousel -->
